[Camden] Added fix for image first button on mobile
Camden has in the right bottom corner a cookie banner button, which
cover part of the "Start a report with a photo" button on mobile. This
commit moves the button to the left, so there is no overlapping.

--- a/web/cobrands/camden/base.scss
+++ b/web/cobrands/camden/base.scss
@@ -508,6 +508,11 @@ a#geolocate_link {
   background-color: $white-2;
 }
 
+.js #photoForm {
+  right: auto;
+  left: 1rem;
+}
+
 .dropzone {
   &:focus, &:focus-visible {
     background-color: transparentize($color: $link-hover-color, $amount: 0.7);
